src/golden/functions/typeerrors/test.golden/testerrors.ut
	test cannot apply ok to a string
		assert (ok "hello")
			7